forms | add swagger documentation for tag version endpoints pt. 1
